[12강] JDK21 enable preview 설정